--- a/src/assets/mp-forest-mantenimiento-correspondencia/i18n/es.json
+++ b/src/assets/mp-forest-mantenimiento-correspondencia/i18n/es.json
@@ -23,9 +23,10 @@
         "subtipoRadicadoError" : "Error al realizar la consulta de Subtipo de Radicado",
         "FuncionarioSuplenteError" : "Error al realizar la consulta de Funcionarios Sumplentes",
         "guardarError" : "Error al guardar",
-        "campoFilaVacioError": "Fila {{filaVacia}}: El campo {{campoVacio}} no puede estar vacío",
-        "responsableCDCError" : "Fila {{filaVacia}}: Se debe marcar una de los campos CDC o Responsable",
-        "repetidoSubtipoRadicadoError" : "Filas {{filaRep1}} y {{filaRep2}} : El campo {{campoRep}} se encuentra repetido"
+        "campoFilaVacioError": "Fila {{filaVacia}}: El campo \"{{campoVacio}}\" no puede estar vacío",
+        "responsableCDCError" : "Fila {{filaVacia}}: Se debe marcar una de los campos \"CDC\" o \"Responsable\"",
+        "repetidoSubtipoRadicadoError" : "Filas {{filaRep1}} y {{filaRep2}} : El Subtipo de Radicado \"{{descripcion}}\" se encuentra repetido, porfavor validar",
+        "repetidoSubtipoRadicadoFiltroError": "El Subtipo de Radicado \"{{descripcion}}\" se encuentra repetido, porfavor validar"
     },
     "TABLA1": {
         "headerTabla0": "",
@@ -34,7 +35,7 @@
         "headerTabla3": "Organismo o Dependencia",
         "headerTabla4": "CDC",
         "headerTabla5": "Responsable",
-        "headerTabla6": "Funcionario Sumplente"
+        "headerTabla6": "Funcionario Suplente"
     }
 },
 
@@ -53,6 +54,7 @@
     },
     "MENSAJES": {
         "guardar":"Guardar",
+        "error":"Error",
         "exito":"Operación de guardar ejecutada con exito",
         "asignarResponsableError": "Error al realizar la consulta de Asignar Responsable",
         "tipoRadicadoError": "Error al realizar la consulta de Tipos de Radicado",
@@ -60,17 +62,32 @@
         "subtipoRadicadoError" : "Error al realizar la consulta de Subtipo de Radicado",
         "FuncionarioSuplenteError" : "Error al realizar la consulta de Funcionarios Sumplentes",
         "guardarError" : "Error al guardar",
-        "campoFilaVacioError": "Fila {{filaVacia}}: El campo {{campoVacio}} no puede estar vacío",
+        "campoFilaVacioError": "Fila {{filaVacia}}: El campo \"{{campoVacio}}\" no puede estar vacío",
+        "campoFilaPlantillaVacioError": "Fila {{filaVacia}}: El campo \"{{campoVacio}}\" no puede estar vacío, si no se tiene selecionado el campo Clase Documental como \"entrada\"",
+        "campoFilaDiasReqVacioError": "Fila {{filaVacia}}: El campo \"{{campoVacio}}\" no puede estar vacío, si se tiene selecionado el campo Termino Requerimiento",
+        "campoFilaDiasProVacioError": "Fila {{filaVacia}}: El campo \"{{campoVacio}}\" no puede estar vacío, si se tiene selecionado el campo Prórroga Entidad o Prórroga Peticionario",
+        "campoFilaDiasMayorError": "Fila {{filaVacia}}: El campo \"{{campoVacio}}\" debe ser mayor a 0",
         "responsableCDCError" : "Fila {{filaVacia}}: Se debe marcar una de los campos CDC o Responsable",
-        "repetidoSubtipoRadicadoError" : "Filas {{filaRep1}} y {{filaRep2}} : El campo {{campoRep}} se encuentra repetido",
+        "repetidoSubtipoRadicadoError" : "Filas {{filaRep1}} y {{filaRep2}} : El campo \"{{campoRep}}\" se encuentra repetido",
         "seleccioneTipoRadicado": "Por Favor Seleccione un tipo de radicado para la fila",
         "claseDocNoRequierePlantilla": "La clase documental Entrada no requiere una selección de plantilla, si continúa se borrará la plantilla seleccionada al inicio",
         "detalleClaseDocNoRequierePlantilla": "¿Desea continuar?",
         "errorGuardar": "Diligenciar todos los campos requeridos",
-        "repetidoComunicacion": "El tipo de comunicación oficial {{NombreComunicacionOficial}} ya se encuentra creado",
-        "repetidosPlantillaSubtipoTipo": "El registro con la plantilla {{nombrePlantilla}} , subtipo de radicado {{nombreSubtipo}} y tipo documental {{nombreTipoDoc}} está repetido",
-        "repetidosPlantillaSubtipoClase": "Para el registro con la plantilla {{nombrePlantilla}}, Subtipo de radicado {{nombreSubtipo}}, la clase documental {{claseDocumental}} no debe ser diferente.",
-        "repetidosSubtipoClase": "El registro con el subtipo de radicado {{nombreSubtipo}} y tipo documental {{claseDocumental}} está repetido"
+        "repetidoComunicacion": "Filas {{filaRep1}} y {{filaRep2}}: El tipo de comunicación oficial \"{{NombreComunicacionOficial}}\" ya se encuentra creado",
+        "repetidosPlantillaSubtipoTipo": "El registro con la plantilla \"{{nombrePlantilla}}\" , subtipo de radicado \"{{nombreSubtipo}}\" y tipo documental \"{{nombreTipoDoc}}\" está repetido",
+        "repetidosPlantillaSubtipoClase": "Para el registro con la plantilla \"{{nombrePlantilla}}\", Subtipo de radicado \"{{nombreSubtipo}}\", la clase documental \"{{claseDocumental}}\" no debe ser diferente.",
+        "repetidosSubtipoClase": "El registro con el subtipo de radicado \"{{nombreSubtipo}}\" y tipo documental \"{{claseDocumental}}\" está repetido",
+        "diasRequerimientoError": "El campo \"Días Requerimiento\" debe ser mayor a 0",
+        "diasProrrogaError": "El campo \"Días Prórroga\" debe ser mayor a 0",
+        "repetidos": "Filas {{filaRep1}} y {{filaRep2}}: El tipo de comunicación oficial \"{{codigo}} y {{claseDocumental}}\" ya se encuentra creado",
+        "eliminarRegistroError": "No es posible eliminar el registro \"{{codigo}} - {{descripcion}}\"",
+        "campoSubRadciadoTipoDocumentalRepetidoError": "Filas {{filaRep1}} y {{filaRep2}}: El registro con la plantilla \"{{plantilla}}\", subtipo de radicado \"{{subRadicado}}\" y tipo documental \"{{tipoDocumental}}\" está repetido",
+        "claseDocumentalDiferenteError": "Filas {{filaRep1}} y {{filaRep2}}: Para el registro con la plantilla \"{{plantilla}}\", Subtipo de radicado \"{{subRadicado}}\", la clase documental no debe ser diferente",
+        "entradaReactivarTerminosError": "Fila {{filaError}}: La clase documental de \"Salida\" no puede estar asociada con un Tipo Documental que reactiva términos, favor validar",
+        "entradaSubRadicadoTipoDocumentalRepetidoError": "Filas {{filaRep1}} y {{filaRep2}}: El registro con el subtipo de radicado \"{{subRadicado}}\" y tipo documental \"{{tipoDocumental}}\" está repetido, para la clase documental \"Entrada\"",
+        "campoSubRadciadoTipoDocumentalRepetidoFiltradoError": "Filas {{filaRep1}}: El registro con la plantilla \"{{plantilla}}\", subtipo de radicado \"{{subRadicado}}\" y tipo documental \"{{tipoDocumental}}\" está repetido, en los registros filtrados",
+        "claseDocumentalDiferenteFiltradoError": "Filas {{filaRep1}}: Para el registro con la plantilla \"{{plantilla}}\", Subtipo de radicado \"{{subRadicado}}\", existe un registro con la clase documental diferente, en los registros filtrados",
+        "entradaSubRadicadoTipoDocumentalRepetidoFiltradoError": "Filas {{filaRep1}}: El registro con el subtipo de radicado \"{{subRadicado}}\" y tipo documental \"{{tipoDocumental}}\" está repetido, para la clase documental \"Entrada\" en los registros filtrados"              
 
     },
     "TABLA1": {
@@ -82,7 +99,7 @@
         "headerTabla5": "Clase Documental",
         "headerTabla6": "Termino Requerimiento",
         "headerTabla7": "Días Requerimiento",
-        "headerTabla8": "Prórroga entidad",
+        "headerTabla8": "Prórroga Entidad",
         "headerTabla9": "Prórroga Peticionario",
         "headerTabla10": "Días Prórroga",
         "headerTabla11": "Tipo Comunicacion",
@@ -138,7 +155,8 @@
         "falloGuardar":"Se ha presentado un error al guardar",
         "falloObtenerAcionesDocumentales":"Error al obtener las Acciones Documentales",
         "repetidos": "Existen registros repetidos para Tipo de Anexo y Anexo Físico",
-        "repetidosAnexoTipo": "Existen Anexos Físicos repetidos para diferentes Tipos de Anexos"
+        "repetidosAnexoTipo": "Existen Anexos Físicos repetidos para diferentes Tipos de Anexos",
+        "campoFilaVacioError": "Fila {{filaVacia}}: El campo \"{{campoVacio}}\" no puede estar vacío"
     },
     "TABLA1": {
         "headerTabla0": "",
@@ -193,7 +211,12 @@
         "falloGuardar":"Se ha presentado un error al guardar",
         "errorGuardar": "Diligenciar todos los campos requeridos",
         "falloObtenerAcionesDocumentales":"Error al obtener las Acciones Documentales",
-        "identificacionRepetida": "El tipo de identificación, se encuentra repetido, por favor validar"
+        "identificacionRepetida": "El tipo de identificación, se encuentra repetido, por favor validar",
+        "campoFilaVacioError": "Fila {{filaVacia}}: El campo \"{{campoVacio}}\" no puede estar vacío",
+        "campoCodigoRepetidoError": "Filas {{filaRep1}} y {{filaRep2}}: El código del canal \"{{codigo}}\", se encuentra repetido, por favor validar",
+        "campoDescreipcionRepetidoError": "Filas {{filaRep1}} y {{filaRep2}}: La descripción del canal \"{{descripcion}}\", se encuentra repetida, por favor validar",
+        "campoEliminarCanalError": "El canal \"{{codigo}} - {{descripcion}}\" no puede ser eliminado ya que se encuentra asociado a uno o más medios de envío",
+        "eliminarAsociacionMedioCanalError" : "La relación del medio de envío \"{{medio}}\" con el canal  \"{{canal}}\" no puede ser eliminada: Se encuentra asociada a uno o más borradores y/o radicados en el sistema "   
     },
     "TABLA1": {
         "headerTabla0": "",
@@ -220,8 +243,8 @@
         "filtrotituloIdentificacion": "Tipo de identificación:",
         "filtrotituloIdentificacionPlaceHolder": "Ingrese aquí el tipo de identificación a filtrar",
         "tablaPersona": "Configurar Tipos de Persona",
-        "tablaTipoId":"Configurar firmantes por tipos de Identificación",
-        "textoTipoId": "Por favor seleccione los cargos de los funcionarios que pueden firmar el tipo de comunicación oficial seleccionada."
+        "tablaTipoId":"Configurar Tipos de Identificación",
+        "textoTipoId": "Por favor seleccione un tipo de persona en la tabla Configurar tipos de persona para luego proceder a asociarle tipos de indentificación."
     },
     "MENSAJES": {
         "guardar":"Guardar",
@@ -260,7 +283,7 @@
         "falloObtenerAcionesDocumentales":"Error al obtener las Acciones Documentales",
         "identificacionRepetida": "El tipo de identificación, se encuentra repetido, por favor validar",
         "guardarError" : "Error al guardar",
-        "tipoDevolucionRepetida": "El motivo de devolución {{motivoDevolucion}}, se encuentra repetido, por favor validar"
+        "tipoDevolucionRepetida": "El motivo de devolución \"{{motivoDevolucion}}\", se encuentra repetido, por favor validar"
     },
     "TABLA1": {
         "headerTabla0": "",
@@ -334,7 +357,13 @@
 
 "CUMCO014": {
   "titulo": "Configurar Tipos de Radicado",
+  "titulo3": "Configurar Categorías del Radicado",
+  "titulo5": "Asociar Lista de Requisitos",
   "pestana1": "Tipos de Radicaco",
+  "pestana2": "Categoria del Radicado",
+  "pestana3": "Lista de requisitos",
+  "pestana31": "Parametrizar Lista de Requisitos",
+  "pestana32": "Asociar Tipo de Radicado con Requisitos",
   "clasificacionOrg": "Clasificación de la Organización",
   "actividadEconomica": "Actividad Económica de la Organización",
   "titulo2": "Configurar Tipos de Radicado con Subtipos y Trámite",
@@ -354,7 +383,17 @@
       "errorHoraInicio": "La hora final del recorrido no puede ser menor a la hora inicial, por favor validar",
       "eliminarFallido1": "El recorrido ",
       "eliminarFallido2": " no puede ser eliminado: Ya se encuentra creado, en caso de ya no estar vigente, por favor proceda a inactivarlo",
-      "repetidos": "Existen registros repetidos para Tipo de Anexo y Anexo Físico"
+      "selcionCheckbosError": "Fila {{filaVacia}}: Debe seleccionar al menos una opción (Ventanilla de Entrada, Comunicaciones Oficiales, o Ventanilla Virtual) para el tipo de radicado {{descripcion}} y subtipo de radicado {{descripcion2}}",
+      "tipoRadicadoRepetidosError": "Filas {{filaRep1}} y {{filaRep2}}: El tipo de radicado \"{{descripcion}}\" se encuentra repetido",
+      "selccionAnonimoError": "Debe seleccionar la opción 'Anónimo' para por lo menos uno de los subtipos de radicados configurados para la Ventanilla Virtual",
+      "campoFilaVacioError": "Fila {{filaVacia}}: El campo \"{{campoVacio}}\" no puede estar vacío",
+      "subtipoRadicadoRepedidoError" : "Filas {{filaRep1}} y {{filaRep2}}: El subtipo de radicado \"{{descripcion}}\" se encuentra repetido",
+      "elminarTipoRadicadoError": "El tipo de radicado \"{{descripcion}}\" no puede ser eliminado: Se encuentra asociado a uno o más subtipos de radicados",
+      "elminarSubtipoRadicadoError": "El subtipo {{descripcion}} no puede ser eliminado: Se encuentra asociado a uno o más borradores y/o radicados en el sistema",
+      "elminarCategoriaError": "No se puede eliminar la categoría \"{{descripcion}}\" seleccionada dado que ya está asociada a tipos de radicados",
+      "elminarCategoriaPrecargadaError": "No se puede eliminar la categoría \"{{descripcion}}\" seleccionada, esta configuración es estándar para el sistema",
+      "campoRepetidoCategoriaRadicadoError": "El código y/o nombre \"{{descripcion}}\" se encuentra repetido"
+
   },
   "TABLA1": {
       "headerTabla0": "",
@@ -367,7 +406,7 @@
       "headerTabla1": "Código Tipo Radicado",
       "headerTabla2": "Descripción (Subtipo de Radicado)",
       "headerTabla3": "Tramite",
-      "headerTabla4": "Días Termino",
+      "headerTabla4": "Días Término",
       "headerTabla5": "Días Hábiles",
       "headerTabla6": "Modificar Días",
       "headerTabla7": "Activo",
@@ -376,7 +415,25 @@
       "headerTabla10": "Comunicaciones Oficiales",
       "headerTabla11": "Ventanilla Virtual",
       "headerTabla12": "Anónimo"
+  },
+  "TABLA3": {
+    "headerTabla0": "",
+    "headerTabla1": "Código",
+    "headerTabla2": "Nombre",
+    "headerTabla3": "Lista de Requisitos"
+  },
+  "TABLA4": {
+    "headerTabla0": "Código",
+    "headerTabla1": "Nombre",
+    "headerTabla2": "Descripcion",
+    "headerTabla3": "Activo",
+    "headerTabla4": "Requerido",
+    "headerTabla5": "Cargar Formulario (Ventanilla Virtual)"
+  },
+  "TABLA5": {
+    "headerTabla0": "Requisito"
   }
+  
 },
 
 "CUMCO016": {
@@ -413,70 +470,32 @@
 
 "CUMCO017": {
   "titulo": "Configurar Tipos de Radicado",
-  "pestana1": "Tipos de Radicado",
-  "tituloVincular": "Vincular Ejes Temáticos con Organismos o Dependencias",
-  "confTipoRadicado": "Configurar Tipos de Radicado con Subtipos y Trámite",
-  "categoriaRadicado": "Categorias de Radicado",
-  "confRadicado": "Configurar Tipos de Radicado con Subtipos y Trámite",
-  "listaReq": "Lista de Requisitos",
-  "parametrizarLista": "Parametrizar Lista de Requisitos",
-  "asociarTipo": "Asociar Tipo de Radicado con Requisitos",
-  "asociarLista": "Asociar List de Requisitos",
+  "pestana1": "Grupos de Seguridad",
+  "pestana2": "Funcionarios Asociados",
   "FILTROS": {
-    "filtroRadicado": "Filtrar por Tipo de Radicado",
-    "filtroRadicadoPlaceHolder": "Ingrese aquí el tipo de radicado a filtrar",
-    "filtroDescripcion": "Filtrar por Descripción (Subtipo de Radicado)",
-    "filtroSubTipo": "Filtrar por Descripción (Subtipo de Radicado)",
-    "filtroTipoRadicado": "Tipo de de Radicado",
-    "filtroSubTipoRadicado": "Subtipo de Radicado"
+    "filtroRadicado": "Radicado",
+    "filtroRadicadoPlaceHolder": "Ingrese aquí el número de radicado a selecionar",
+    "filtroGrupoAsociado": "Grupo Asociado"
   },
   "MENSAJES": {
       "guardar":"Guardar",
       "exito":"Operación de guardar ejecutada con exito",
       "falloGuardar":"Se ha presentado un error al guardar",
-      "errorGuardar": "Diligenciar todos los campos requeridos"
+      "errorGuardar": "Diligenciar todos los campos requeridos",
+      "campoEliminarGrupoSeguridadError": "No es posible eliminar el registro \"{{descripcion}}\"",
+      "campoFilaVacioError": "Fila {{filaVacia}}: El campo \"{{campoVacio}}\" no puede estar vacío",
+      "campoCodigoClasificacionRepetido": "Filas {{filaRep1}} y {{filaRep2}}: El registro  \"{{descripcion}}\" y \"{{nombre}}\", se encuentra repetido",
+      "selecionarDependencia": "Se debe seleccionar una dependencia, para poder obtener los funcionarios asociados",
+      "camposDependenciaFuncionarioRepetido": "Filas {{filaRep1}} y {{filaRep2}}: El registro  \"{{dependencia}}\" con el funcionario \"{{funcionario}}\", se encuentra repetido"   
   },
   "TABLA1": {
-      "headerTabla0": "",
-      "headerTabla1": "Código",
-      "headerTabla2": "Descripción Tipo Radicado",
-      "headerTabla3": "Categoria",
-      "headerTabla4": "Activo"
+      "headerTabla0": "Clasificación de la Información",
+      "headerTabla1": "Asociar Grupo Sistema",
+      "headerTabla2": "Observaciones"
   },
   "TABLA2": {
-      "headerTabla0": "",
-      "headerTabla1": "Código Tipo Radicado",
-      "headerTabla2": "Descripción (Subtipo de Radicado)",
-      "headerTabla3": "Trámite",
-      "headerTabla4": "Días Termino",
-      "headerTabla5": "Días Habiles",
-      "headerTabla6": "Activo",
-      "headerTabla7": "Ventanilla de Entrada",
-      "headerTabla8": "Radicación Verbal",
-      "headerTabla9": "Comunicaciones Oficiales",
-      "headerTabla10": "Ventanilla Virtual",
-      "headerTabla11": "Anónimo"
-  },
-  "TABLA3": {
-      "headerTabla0": "",
-      "headerTabla1": "Código",
-      "headerTabla2": "Nombre",
-      "headerTabla3": "Lista de Requisitos"
-  },
-  "TABLA4": {
-      "headerTabla0": "",
-      "headerTabla1": "Código",
-      "headerTabla2": "Nombre",
-      "headerTabla3": "Descripción",
-      "headerTabla4": "Activo",
-      "headerTabla5": "Requerido",
-      "headerTabla6": "Requerido",
-      "headerTabla7": "Formato de Archivo (Ventanilla virtual)",
-      "headerTabla8": "Cargar de Formulario (Ventanilla virtual)"
-  },
-  "TABLA5": {
-      "headerTabla0": "",
-      "headerTabla1": "Requisito"
+      "headerTabla0": "Organismo o Dependencia",
+      "headerTabla1": "Funcionario"
   }
 },
 
