--- a/src/assets/mp-forest-mantenimiento-correspondencia/i18n/es.json
+++ b/src/assets/mp-forest-mantenimiento-correspondencia/i18n/es.json
@@ -26,7 +26,8 @@
         "campoFilaVacioError": "Fila {{filaVacia}}: El campo \"{{campoVacio}}\" no puede estar vacío",
         "responsableCDCError" : "Fila {{filaVacia}}: Se debe marcar una de los campos \"CDC\" o \"Responsable\"",
         "repetidoSubtipoRadicadoError" : "Filas {{filaRep1}} y {{filaRep2}} : El Subtipo de Radicado \"{{descripcion}}\" se encuentra repetido, porfavor validar",
-        "repetidoSubtipoRadicadoFiltroError": "El Subtipo de Radicado \"{{descripcion}}\" se encuentra repetido, porfavor validar"
+        "repetidoSubtipoRadicadoFiltroError": "El Subtipo de Radicado \"{{descripcion}}\" se encuentra repetido, porfavor validar",
+        "repetidoSubtipoRadicadoFiltroError2": "El Subtipo de Radicado \"{{descripcion}}\" se encuentra repetido en los registros filtrados, porfavor validar"
     },
     "TABLA1": {
         "headerTabla0": "",
@@ -43,7 +44,7 @@
     "titulo": "Configurar Plantillas",
     "TipoRadicado": "Tipo de Radicado:",
     "pestana1": "Plantillas",
-    "pestana2": "Tipo Comunicación Ofcicial",
+    "pestana2": "Tipo Comunicación Oficial",
     "FILTROS": {
         "filtroPlantilla": "Plantilla:",
         "filtroPlantillaPlaceHolder": "Ingresar aquí plantilla a filtrar",
@@ -85,9 +86,9 @@
         "claseDocumentalDiferenteError": "Filas {{filaRep1}} y {{filaRep2}}: Para el registro con la plantilla \"{{plantilla}}\", Subtipo de radicado \"{{subRadicado}}\", la clase documental no debe ser diferente",
         "entradaReactivarTerminosError": "Fila {{filaError}}: La clase documental de \"Salida\" no puede estar asociada con un Tipo Documental que reactiva términos, favor validar",
         "entradaSubRadicadoTipoDocumentalRepetidoError": "Filas {{filaRep1}} y {{filaRep2}}: El registro con el subtipo de radicado \"{{subRadicado}}\" y tipo documental \"{{tipoDocumental}}\" está repetido, para la clase documental \"Entrada\"",
-        "campoSubRadciadoTipoDocumentalRepetidoFiltradoError": "Filas {{filaRep1}}: El registro con la plantilla \"{{plantilla}}\", subtipo de radicado \"{{subRadicado}}\" y tipo documental \"{{tipoDocumental}}\" está repetido, en los registros filtrados",
-        "claseDocumentalDiferenteFiltradoError": "Filas {{filaRep1}}: Para el registro con la plantilla \"{{plantilla}}\", Subtipo de radicado \"{{subRadicado}}\", existe un registro con la clase documental diferente, en los registros filtrados",
-        "entradaSubRadicadoTipoDocumentalRepetidoFiltradoError": "Filas {{filaRep1}}: El registro con el subtipo de radicado \"{{subRadicado}}\" y tipo documental \"{{tipoDocumental}}\" está repetido, para la clase documental \"Entrada\" en los registros filtrados"              
+        "campoSubRadciadoTipoDocumentalRepetidoFiltradoError": "Fila {{filaRep1}}: El registro con la plantilla \"{{plantilla}}\", subtipo de radicado \"{{subRadicado}}\" y tipo documental \"{{tipoDocumental}}\" está repetido, en los registros filtrados",
+        "claseDocumentalDiferenteFiltradoError": "Fila {{filaRep1}}: Para el registro con la plantilla \"{{plantilla}}\", Subtipo de radicado \"{{subRadicado}}\", existe un registro con la clase documental diferente, en los registros filtrados",
+        "entradaSubRadicadoTipoDocumentalRepetidoFiltradoError": "Fila {{filaRep1}}: El registro con el subtipo de radicado \"{{subRadicado}}\" y tipo documental \"{{tipoDocumental}}\" está repetido, para la clase documental \"Entrada\" en los registros filtrados"              
 
     },
     "TABLA1": {
@@ -154,9 +155,12 @@
         "exito":"Operación de guardar ejecutada con exito",
         "falloGuardar":"Se ha presentado un error al guardar",
         "falloObtenerAcionesDocumentales":"Error al obtener las Acciones Documentales",
-        "repetidos": "Existen registros repetidos para Tipo de Anexo y Anexo Físico",
+        "repetidosTipoAnexoFisicoError": "Filas {{filaRep1}} y {{filaRep2}}: Existen registros repetidos para Tipo de Anexo \"{{tipoAnexo}}\" y el Anexo Físico \"{{anexoFisico}}\"",
         "repetidosAnexoTipo": "Existen Anexos Físicos repetidos para diferentes Tipos de Anexos",
-        "campoFilaVacioError": "Fila {{filaVacia}}: El campo \"{{campoVacio}}\" no puede estar vacío"
+        "campoFilaVacioError": "Fila {{filaVacia}}: El campo \"{{campoVacio}}\" no puede estar vacío",
+        "repetidosTipoAnexoFisicoFiltradoError": "Fila {{filaRep1}}: Existen registros repetidos para Tipo de Anexo \"{{tipoAnexo}}\" y el Anexo Físico \"{{anexoFisico}}\", en los registros filtrados",
+        "repetidosAnexoFisicoError": "Filas {{filaRep1}} y {{filaRep2}}: El Anexos Físico \"{{anexoFisico}}\" esta repetido en diferentes Tipos de Anexos",
+        "repetidosAnexoFisicoFiltroError": "Filas {{filaRep1}}: El Anexos Físico \"{{anexoFisico}}\" esta repetido en diferentes Tipos de Anexos, en los registros filtrados"
     },
     "TABLA1": {
         "headerTabla0": "",
@@ -185,8 +189,15 @@
         "repetidos": "Existen registros repetidos para Tipo de Anexo y Anexo Físico",
         "repetidosAnexoTipo": "Existen Anexos Físicos repetidos para diferentes Tipos de Anexos",
         "errorGuardar": "Diligenciar todos los campos requeridos",
-        "errorHora": "La hora final seleccionada debe ser superior a la hora de inicio ingresada",
-        "errorFecha": "La fecha Festivo se encuentra repetida por favor validar"
+        "errorHoraCanal": "La hora final seleccionada en para el Canal a Configurar, debe ser superior a la hora de inicio ingresada",
+        "errorHoraCOF": "La hora final seleccionada para COF, debe ser superior a la hora de inicio ingresada",
+        "errorFecha": "La fecha Festivo se encuentra repetida por favor validar",
+        "repetidosFechaError": "Filas {{filaRep1}} y {{filaRep2}}: La fecha \"{{fecha}}\" se ecuentra repetida",
+        "errorHoraInicialCanal": "Diligenciar el campo \"Hora Incio\" del Canal a Canfigurar",
+        "errorHoraFinCanal": "Diligenciar el campo \"Hora Fin\" del Canal a Canfigurar",
+        "campoFechaVacioErro": "Fila {{filaVacia}}: El campo \"Fecha Festivo\" no puede estar vacío",
+        "errorHoraInicialCOF": "Diligenciar el campo \"Hora Incio\" del Horario de Radicación Comunicaciónes Oficicales",
+        "errorHoraFinlCOF": "Diligenciar el campo \"Hora Fin\" del Horario de Radicación Comunicaciónes Oficicales"
     },
     "TABLA1": {
         "headerTabla0": "",
@@ -209,14 +220,18 @@
         "guardar":"Guardar",
         "exito":"Operación de guardar ejecutada con exito",
         "falloGuardar":"Se ha presentado un error al guardar",
-        "errorGuardar": "Diligenciar todos los campos requeridos",
         "falloObtenerAcionesDocumentales":"Error al obtener las Acciones Documentales",
         "identificacionRepetida": "El tipo de identificación, se encuentra repetido, por favor validar",
         "campoFilaVacioError": "Fila {{filaVacia}}: El campo \"{{campoVacio}}\" no puede estar vacío",
         "campoCodigoRepetidoError": "Filas {{filaRep1}} y {{filaRep2}}: El código del canal \"{{codigo}}\", se encuentra repetido, por favor validar",
         "campoDescreipcionRepetidoError": "Filas {{filaRep1}} y {{filaRep2}}: La descripción del canal \"{{descripcion}}\", se encuentra repetida, por favor validar",
         "campoEliminarCanalError": "El canal \"{{codigo}} - {{descripcion}}\" no puede ser eliminado ya que se encuentra asociado a uno o más medios de envío",
-        "eliminarAsociacionMedioCanalError" : "La relación del medio de envío \"{{medio}}\" con el canal  \"{{canal}}\" no puede ser eliminada: Se encuentra asociada a uno o más borradores y/o radicados en el sistema "   
+        "eliminarAsociacionMedioCanalError" : "La relación del medio de envío \"{{medio}}\" con el canal  \"{{canal}}\" no puede ser eliminada: Se encuentra asociada a uno o más borradores y/o radicados en el sistema",
+        "campoCodigoRepetidoFiltroError": "Fila {{filaRep1}}: El código del canal \"{{codigo}}\", se encuentra repetido en los regitros filtrados, por favor validar",
+        "campoDescreipcionRepetidoFiltroError": "Fila {{filaRep1}}: La descripción del canal \"{{descripcion}}\", se encuentra repetida en los regitros filtrados, por favor validar",
+        "campoMedioEnvioRepetidoError": "Filas {{filaRep1}} y {{filaRep2}}: El Medio de Envío \"{{medioEnvio}}\" se encuentra repetido, por favor validar",
+        "campoMedioEnvioRepetidoFiltroError": "Fila {{filaRep1}}: El Medio de Envío \"{{medioEnvio}}\" se encuentra repetido en los regitros filtrados, por favor validar",
+        "medioEnvioAsociadoRadicadodoError": "La relación del medio de envío \"{{medioEnvio}}\" con el canal \"{{canal}}\" no puede ser eliminada: Se encuentra asociada a uno o más radicados en el sistema"                    
     },
     "TABLA1": {
         "headerTabla0": "",
@@ -250,9 +265,12 @@
         "guardar":"Guardar",
         "exito":"Operación de guardar ejecutada con exito",
         "falloGuardar":"Se ha presentado un error al guardar",
-        "errorGuardar": "Diligenciar todos los campos requeridos",
+        "errorCampoVacio": "Fila {{filaVacia}}: El campo \"{{campoVacio}}\" no puede estar vacío",
+        "errorGuardarCampo": "Diligenciar todos los campos requeridos",
         "falloObtenerAcionesDocumentales":"Error al obtener las Acciones Documentales",
-        "identificacionRepetida": "El tipo de identificación, se encuentra repetido, por favor validar"
+        "identificacionRepetida": "El tipo de identificación \"{{tipoIdentificacion}}\" ya se encuentra asociado al tipo de persona \"{{tipoPersona}}\"",
+        "errorEliminarFijo": "No se puede eliminar el tipo de identificación \"{{tipoIdentificacion}}\" seleccionado, esta configuración es estándar para el tipo de persona \"{{tipoPersona}}\"",
+        "errorPersonaAnonima": "No se pueden agregar más tipos de identificación para el tipo de persona Anónima"     
     },
     "TABLA1": {
         "headerTabla0": "",
@@ -283,7 +301,8 @@
         "falloObtenerAcionesDocumentales":"Error al obtener las Acciones Documentales",
         "identificacionRepetida": "El tipo de identificación, se encuentra repetido, por favor validar",
         "guardarError" : "Error al guardar",
-        "tipoDevolucionRepetida": "El motivo de devolución \"{{motivoDevolucion}}\", se encuentra repetido, por favor validar"
+        "tipoDevolucionRepetida": "Fila {{filaRep1}}: El motivo de devolución \"{{motivoDevolucion}}\", se encuentra repetido en los registros filtrados, por favor validar",
+        "motivoDevolucionRepetidoError": "Filas {{filaRep1}} y {{filaRep2}}: El motivo de devolución \"{{motivoDevolucion}}\", se encuentra repetido, por favor validar"   
     },
     "TABLA1": {
         "headerTabla0": "",
