--- a/src/assets/mp-forest-mantenimiento-correspondencia/i18n/es.json
+++ b/src/assets/mp-forest-mantenimiento-correspondencia/i18n/es.json
@@ -45,6 +45,8 @@
     "TipoRadicado": "Tipo de Radicado:",
     "pestana1": "Plantillas",
     "pestana2": "Tipo Comunicación Oficial",
+    "aceptarBoton": "SI",
+    "noAceptarBoton": "NO",
     "FILTROS": {
         "filtroPlantilla": "Plantilla:",
         "filtroPlantillaPlaceHolder": "Ingresar aquí plantilla a filtrar",
@@ -270,7 +272,8 @@
         "falloObtenerAcionesDocumentales":"Error al obtener las Acciones Documentales",
         "identificacionRepetida": "El tipo de identificación \"{{tipoIdentificacion}}\" ya se encuentra asociado al tipo de persona \"{{tipoPersona}}\"",
         "errorEliminarFijo": "No se puede eliminar el tipo de identificación \"{{tipoIdentificacion}}\" seleccionado, esta configuración es estándar para el tipo de persona \"{{tipoPersona}}\"",
-        "errorPersonaAnonima": "No se pueden agregar más tipos de identificación para el tipo de persona Anónima"     
+        "errorPersonaAnonima": "No se pueden agregar más tipos de identificación para el tipo de persona Anónima", 
+        "errorIdentificacionTercero": "El tipo de identificación \"{{tipoIdentificacion}}\" no puede ser eliminado: Se encuentra asociado a uno o más terceros en el sistema"     
     },
     "TABLA1": {
         "headerTabla0": "",
@@ -477,7 +480,13 @@
       "errorHoraInicio": "La hora final del recorrido no puede ser menor a la hora inicial, por favor validar",
       "eliminarFallido1": "El recorrido ",
       "eliminarFallido2": " no puede ser eliminado: Ya se encuentra creado, en caso de ya no estar vigente, por favor proceda a inactivarlo",
-      "repetidos": "Existen registros repetidos para Tipo de Anexo y Anexo Físico"
+      "repetidos": "Existen registros repetidos para Tipo de Anexo y Anexo Físico",
+      "campoFilaVacioError": "Fila {{filaVacia}}: El campo \"{{campoVacio}}\" no puede estar vacío",
+      "campoEjeRepetidoError": "Filas {{filaRep1}} y {{filaRep2}}: El Eje Temático \"{{eje}}\" se encuentra repetido",
+      "guradarRelacionEjesDependenciaExito": "Los ejes temáticos seleccionados fueron vinculados exitosamente al organismo o dependencia \"{{dependencia}}\"",
+      "ejeTematicoGuardarExito": "Los ejes temáticos se guardaron exitosamente",
+      "ejeTematicoEliminarErrorDepe": "El eje temático \"{{eje}}\" no puede ser eliminado porque está vinculado a las dependencias {{dependencias}} elimine la asociación y luego realice la eliminación",
+      "ejeAsociadoRadicadoError" : "El eje temático \"{{eje}}\" no puede ser eliminado porque se encuentra asociado a uno o más borradores y/o radicados en el sistema"
   },
   "TABLA1": {
       "headerTabla0": "",
@@ -498,7 +507,7 @@
   },
   "MENSAJES": {
       "guardar":"Guardar",
-      "exito":"Operación de guardar ejecutada con exito",
+      "exitoGuardar":"Operación de guardar ejecutada con exito",
       "falloGuardar":"Se ha presentado un error al guardar",
       "errorGuardar": "Diligenciar todos los campos requeridos",
       "campoEliminarGrupoSeguridadError": "No es posible eliminar el registro \"{{descripcion}}\"",
@@ -561,10 +570,6 @@
 
 "CUMCO019": {
   "titulo": "Filtros",
-  "mensajeros": "Mensajeros",
-  "parametrizarMensajero": "Parametrizar Mensajero",
-  "empresaMensajeria": "Empresa Mensajería",
-  "parametrizarEmpresa": "Parametrizar Empresa",
   "tipoComunicacion": "Tipos de Comuniación Oficial",
   "configurarFirmantes": "Configurar firmantes por tipo de Comunicación",
   "FILTROS": {
@@ -578,7 +583,11 @@
       "guardar":"Guardar",
       "exito":"Operación de guardar ejecutada con exito",
       "falloGuardar":"Se ha presentado un error al guardar",
-      "errorGuardar": "Diligenciar todos los campos requeridos"
+      "errorGuardar": "Diligenciar todos los campos requeridos",
+      "campoFilaVacioError": "Fila {{filaVacia}}: El campo \"{{campoVacio}}\" no puede estar vacío",
+      "campoCargoRepetidoError": "Filas {{filaRep1}} y {{filaRep2}}: El Cargo Firmante \"{{cargo}}\" se encuentra repetido, por favor validar",
+      "campoCargoRepetidoFiltroError": "Fila {{filaRep1}}: El Cargo Firmante \"{{cargo}}\" se encuentra repetido en los regitros filtrados, por favor validar"
+
   },
   "TABLA1": {
       "headerTabla0": "",
